# dogwalker

./: Cargo.toml  README.md  min.txt
article/: rwd.tex
collect/: 3-closed.txt  4-closed.txt  4-general.txt  5-closed.txt  5-general.txt  6-closed.txt  6-general.txt  7-closed.txt  7-general.txt  8-closed.txt  8-general.txt  9-closed.txt  9-general.txt
record/: 3-closed.txt  3-general.txt  4-closed.txt  4-general.txt  5-closed.txt  5-general.txt  6-closed.txt  6-general.txt  7-closed.txt  7-general.txt  8-closed.txt
src/: lib.rs  main.rs  parser.rs  recorder.rs  rng.rs  sort.rs  util.rs
