[package]
name = "dogwalker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
core_affinity = "0.8"
ctrlc = "3"
mixhash = { git = "https://github.com/yescallop/mixhash" }
once_cell = "1"
quickperm = { git = "https://github.com/yescallop/quickperm-rs" }
readonly = "0.2"
regex = "1"
